# frameless-eval

./: .gitignore  README.md  environment.yml  pyproject.toml
frameless_eval/: __init__.py  metrics.py  utils.py
notebooks/: example_usage.ipynb  thumbnail.ipynb
